[metadata]
name = coincurve-stubs
version = 9.0.0
description = Stubs, i.e., type information, for Coincurve
long_description = file: README.rst
license = MIT
url = https://github.com/planetarium/coincurve-stubs
author = Hong Minhee
author_email = hong.minhee@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development

[options]
packages =
    coincurve

[options.package_data]
coincurve =
    py.typed
    context.pyi
    keys.pyi
    utils.pyi
